# implement-my-own-cxx

./: CMakeLists.txt  README.md
cmake/: 3rd.cmake
endian-test/: CMakeLists.txt
endian-test/include/endian-test/: endiantest.hpp
math/: CMakeLists.txt
memory-pool/: CMakeLists.txt
memory-pool/include/memory-pool/: memorypoolconstant.hpp  objectpool.hpp
sample/: CMakeLists.txt  main.cpp
thread-pool/: CMakeLists.txt
thread-pool/include/thread-pool/: threadpool.hpp
wav-parser/: CMakeLists.txt  readme.md
wav-parser/doc/: 关于cmake的PUBLIC和INTERFACE以及add_library.md
wav-parser/include/wav-parser/: wavparser.hpp
